# cbf

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  Taskfile.yml  book.toml  depot_tools.sh  justfile  pyproject.toml
.github/workflows/: docs.yml
chromium/: CHANGELOG.md
crates/cbf/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/cbf-chrome/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/cbf-chrome-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/cbf-chrome-sys/include/: cbf_bridge_bindgen_wrapper.h  cbf_bridge_ffi_bindgen_wrapper.h
crates/cbf-chrome-sys/src/: bridge.rs  bridge_api_generated.rs  calls.rs  ffi.rs  ffi_bridge_generated.rs  ffi_data_generated.rs  ffi_generated.rs  lib.rs  symbols.rs
crates/cbf-chrome-sys/tools/: generate_ffi.py
crates/cbf-chrome/src/: backend.rs  browser.rs  chromium_backend.rs  chromium_process.rs  command.rs  event.rs  input.rs  lib.rs  process.rs  surface.rs
crates/cbf-chrome/src/bridge/: client.rs  event.rs  map.rs  mod.rs  utils.rs
crates/cbf-chrome/src/data/: background.rs  browsing_context_open.rs  choice_menu.rs  context_menu.rs  custom_scheme.rs  download.rs  drag.rs  extension.rs  find.rs  generic.rs  ids.rs  ime.rs  input.rs  ipc.rs  lifecycle.rs  mod.rs  mouse.rs  policy.rs  profile.rs  prompt_ui.rs  surface.rs  tab_open.rs  visibility.rs  window_open.rs
crates/cbf-chrome/src/ffi/: client.rs  event.rs  map.rs  mod.rs  utils.rs
crates/cbf-chrome/src/platform/: mod.rs
crates/cbf-chrome/src/platform/macos/: browser_view.rs  choice_menu.rs  mod.rs
crates/cbf-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/cbf-cli/src/: cli.rs  config.rs  error.rs  main.rs  plist.rs
crates/cbf-cli/src/bundle/: macos.rs
crates/cbf-compositor/: CHANGELOG.md  Cargo.toml  README.md
crates/cbf-compositor/src/: data.rs  error.rs  lib.rs  window.rs
crates/cbf-compositor/src/backend/: mod.rs
crates/cbf-compositor/src/backend/chrome/: event_adapter.rs  mod.rs  surface_adapter.rs  transient_adapter.rs
crates/cbf-compositor/src/core/: commands.rs  compositor.rs  mod.rs
crates/cbf-compositor/src/model/: composition.rs  geometry.rs  ids.rs  mod.rs  ownership.rs  target.rs
crates/cbf-compositor/src/platform/: hit_test.rs  host.rs  mod.rs  unsupported.rs
crates/cbf-compositor/src/platform/macos/: compositor_view.rs  hit_test.rs  ime.rs  mod.rs  surface_slot.rs  window_host.rs
crates/cbf-compositor/src/state/: composition_state.rs  focus_state.rs  mod.rs  ownership_state.rs  surface_state.rs
crates/cbf-sys/: Cargo.toml  build.rs
crates/cbf/src/: backend_event_loop.rs  browser.rs  browser_session.rs  chromium_backend.rs  chromium_process.rs  command.rs  dialogs.rs  dummy_backend.rs  error.rs  event.rs  lib.rs
crates/cbf/src/backend_delegate/: dispatcher.rs  mod.rs  types.rs
crates/cbf/src/data/: auxiliary_window.rs  background.rs  browsing_context_open.rs  context_menu.rs  dialog.rs  download.rs  drag.rs  edit.rs  extension.rs  ids.rs  ime.rs  ipc.rs  key.rs  mod.rs  mouse.rs  permission.rs  policy.rs  profile.rs  surface.rs  transient_browsing_context.rs  visibility.rs  window_open.rs
crates/cbf/src/delegate/: dispatcher.rs  types.rs
crates/cbf/src/dialogs/: macos.rs  mod.rs
crates/cbf/src/ffi/: map.rs  mod.rs  utils.rs
crates/cbf/src/middleware/: auto_dialog_responder.rs  error_guard.rs  lifecycle.rs  logging.rs  mod.rs  resize_debounce.rs
crates/cbf/src/platform/: mod.rs
crates/cbf/src/platform/macos/: bindings.rs  browser_view.rs  mod.rs
docs/: SUMMARY.md  architecture.md  chromium-fork-guide.md  developer-setup-guide.md  feature-matrix.md  implementation-guide.md  index.md  licensing.md  setup-guide.md  user-setup-guide.md
docs/decisions/: 0001-api-design-sketch.md  0001-layered-api-for-generic-and-chromium.md  0002-devtools-integration-without-chrome-browser-dependency.md  0003-chrome-runtime-default-and-cbf-scope.md  0004-chrome-feature-wiring-on-webcontents-path.md  0005-host-mediated-browsing-context-open-and-disposition-mapping.md  0006-chrome-only-runtime-and-id-vocabulary-boundary.md  0007-embedded-rendering-invariant-for-browser-backed-context.md  0008-cbf-compositor-gui-integration-boundary.md  README.md
docs/developer-guide/: chromium-fork-workflow.md  chromium-implementation-guide.md  chromium-integration-rules.md  contributor-setup.md  decisions.md  licensing.md  release-compatibility-matrix.md  release-process.md  troubleshooting.md  versioning-and-release-metadata.md
docs/getting-started/: concepts.md  user-setup.md
docs/knowledge/: browser-tab-implementation-strategy.md  cbf-close-web-page.md  cef-ca-layer.md  chromium-ime-yellow-background.md  chromium-mac-begin-dragging-session-flow.md  chromium-mac-drag-preview-scale-mismatch.md  chromium-mac-ime-flow.md  (+18 more)
examples/simpleapp/: Cargo.toml  LICENSE  README.md  app.rs  build.rs  cli.rs  core.rs  main.rs  platform_macos.rs
examples/simpleapp/src/: app.rs  cli.rs  core.rs  main.rs  overlay-hit-test.js  overlay.html  platform_macos.rs  popup.html  ui.html
examples/simpleapp/src/app/: controller.rs  events.rs  mod.rs  state.rs
examples/simpleapp/src/browser/: forwarder.rs  mod.rs  startup.rs
examples/simpleapp/src/ipc/: mod.rs
examples/simpleapp/src/ipc/overlay/: handler.rs  protocol.rs  publisher.rs
examples/simpleapp/src/ipc/toolbar/: handler.rs  mod.rs  protocol.rs  publisher.rs
examples/simpleapp/src/platform/macos/: menu.rs  mod.rs  termination.rs  window_registry.rs  window_visibility.rs
examples/simpleapp/src/platform_macos/: menu.rs  window_visibility.rs
examples/simpleapp/src/scene/: composition.rs  embedded_assets.rs  layout.rs  mod.rs  ui_url.rs
refact-tasks/: 00-inventory.md  01-backend-and-transport-split.md  02-input-key-mouse.md  03-ime-split.md  04-drag-split.md  05-surface-context-menu-split.md  06-sys-to-chrome-sys-migration.md  07-webpage-to-browsing-context-rename.md  strategy.md
tool/: README.md  __init__.py  __main__.py  _subprocess.py  chromium_patches.py  cli.py  ffi.py  ffi_issue64_allowlist.json  release.py
(+81 files in other folders)
