[workspace]
resolver = "3"
members = ["crates/cbf", "crates/cbf-sys"]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
authors = ["Takagi Tasuku <tasuren@outlook.jp>"]
description = "A framework for developing Chromium-based browsers"
repository = "https://github.com/tasuren/cbf"

[workspace.dependencies]
thiserror = "2"
cursor-icon = "1.2"
async-channel = "2.5"
async-process = "2.5"
futures-lite = "2.6"
oneshot = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3.22"
objc2 = "0.6.3"
objc2-foundation = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-app-kit = "0.3.2"
objc2-quartz-core = "0.3.2"
