[workspace]
resolver = "3"
members = [
  "crates/cbf-cli",
  "crates/cbf-compositor",
  "crates/cbf",
  "crates/cbf-chrome",
  "crates/cbf-chrome-sys",
  "examples/simpleapp",
]

[workspace.package]
version = "0.1.0-alpha.2"
edition = "2024"
authors = ["Takagi Tasuku <tasuren@icloud.com>"]
description = "A framework for developing Chromium-based browsers"
keywords = ["chromium", "browser"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/tasuren/cbf"

[workspace.dependencies]
thiserror = "2"
cursor-icon = "1.2"
async-channel = "2.5"
async-process = "2.5"
futures-lite = "2.6"
oneshot = "0.1"
tracing = "0.1"
block2 = "0.6.2"
objc2 = "0.6.3"
objc2-foundation = { version = "0.3.2", default-features = false }
objc2-core-foundation = { version = "0.3.2", default-features = false }
objc2-app-kit = { version = "0.3.2", default-features = false }
objc2-quartz-core = { version = "0.3.2", default-features = false }

# Example dependencies
clap = "4.5"
tracing-subscriber = "0.3.22"
winit = "0.30.12"
raw-window-handle = "0.6"
dirs = "6"
