[workspace]
resolver = "3"
members = [
  "crates/cbf-cli",
  "crates/cbf-compositor",
  "crates/cbf",
  "crates/cbf-chrome",
  "crates/cbf-chrome-sys",
  "examples/simpleapp",
]

[workspace.package]
edition = "2024"
authors = ["Takagi Tasuku <tasuren@icloud.com>"]
description = "A framework for developing Chromium-based browsers"
keywords = ["chromium", "browser"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/cbf-hq/cbf"

[workspace.dependencies]
thiserror = "2"
libc = "0.2"
getrandom = "0.4"
cursor-icon = "1.2"
async-channel = "2.5"
async-process = "2.5"
futures-lite = "2.6"
oneshot = "0.2"
tracing = "0.1"
signal-hook = "0.4"
raw-window-handle = "0.6"
rfd = "0.17"
block2 = "0.6.2"
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", default-features = false }
objc2-core-foundation = { version = "0.3.2", default-features = false }
objc2-app-kit = { version = "0.3.2", default-features = false }
objc2-quartz-core = { version = "0.3.2", default-features = false }
cargo_metadata = "0.23"
clap = "4.6"
serde = "1"
serde_json = "1"
plist = "1.8"

# Example dependencies
tracing-subscriber = "0.3"
winit = "0.30.13"
dirs = "6"
async-executor = "1.14"
image = "0.25"
rust-embed = "8.11"
muda = "0.17"
