[project]
name = "cbf-tool"
version = "0.0.0"
description = "Python project to manage tools for development"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
tool = "tool.cli:main"

[tool.pyright]
typeCheckingMode = "basic"
exclude = ["chromium", "depot_tools", ".venv"]

[dependency-groups]
dev = ["click>=8.3.1", "pyright>=1.1.408", "ruff>=0.14.9"]
