[package]
name = "cbf-chrome-sys"
version = "146.1.0-alpha.2"
edition.workspace = true
authors.workspace = true
description = "Chromium-specific low-level Rust FFI/wire boundary for CBF"
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
libloading.workspace = true
thiserror.workspace = true

[package.metadata.docs.rs]
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin"]
