[package]
name = "cbf-chrome"
version = "0.1.0-alpha.2"
edition.workspace = true
authors.workspace = true
description = "Chromium-specific safe API layer for CBF"
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"

[features]
default = ["macos-choice-menu-default"]
macos-choice-menu-default = []

[dependencies]
cbf.path = "../cbf"
cbf-chrome-sys.path = "../cbf-chrome-sys"
thiserror.workspace = true
cursor-icon = { workspace = true }
async-channel.workspace = true
async-process.workspace = true
futures-lite.workspace = true
oneshot = { workspace = true, features = ["async", "std"] }
tracing.workspace = true
getrandom = { workspace = true, features = ["std"] }
signal-hook.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
plist = { workspace = true }
objc2 = { workspace = true }
objc2-core-foundation = { workspace = true, features = ["CFCGTypes"] }
objc2-quartz-core = { workspace = true, features = [
  "CALayer",
  "CATransaction",
  "objc2-core-foundation",
] }

[target.'cfg(target_os = "macos")'.dependencies.objc2-foundation]
workspace = true
features = [
  "NSArray",
  "NSAttributedString",
  "NSData",
  "NSObject",
  "NSObjCRuntime",
  "NSRange",
  "NSString",
  "NSGeometry",
  "objc2-core-foundation",
]

[target.'cfg(target_os = "macos")'.dependencies.objc2-app-kit]
workspace = true
features = [
  "NSApplication",
  "NSCell",
  "NSDragging",
  "NSDraggingItem",
  "NSDraggingSession",
  "NSEvent",
  "NSGraphicsContext",
  "NSImage",
  "NSMenu",
  "NSMenuItem",
  "NSMenuItemBadge",
  "NSPasteboard",
  "NSResponder",
  "NSTextInputClient",
  "NSView",
  "NSWindow",
  "objc2-quartz-core",
]

[package.metadata.docs.rs]
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin"]
