[package]
name = "cbf-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "CBF developer workflow CLI"
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[[bin]]
name = "cbf"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
thiserror.workspace = true
cargo_metadata = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plist = "1.8"
