[package]
name = "cbf-cli"
version = "0.1.0-alpha.2"
edition.workspace = true
authors.workspace = true
description = "CBF developer workflow CLI"
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true

[[bin]]
name = "cbf"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
cargo_metadata.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
plist.workspace = true
