[package]
name = "cbf"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
thiserror.workspace = true
cursor-icon = { workspace = true }
async-channel.workspace = true
async-process.workspace = true
futures-lite.workspace = true
oneshot = { workspace = true, features = ["async", "std"] }
tracing.workspace = true
