[package]
name = "cbf"
version = "0.1.0-alpha.4"
edition.workspace = true
authors.workspace = true
description = "A framework for developing Chromium-based browsers."
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["web-programming"]
license.workspace = true
readme = "README.md"

[features]
default = []
native-dialogs = [
    "dep:block2",
    "dep:objc2",
    "dep:objc2-app-kit",
    "dep:objc2-core-foundation",
    "dep:objc2-foundation",
]

[dependencies]
thiserror.workspace = true
cursor-icon = { workspace = true }
async-channel.workspace = true
async-process.workspace = true
futures-lite.workspace = true
oneshot = { workspace = true, features = ["async", "std"] }
tracing.workspace = true
raw-window-handle.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
block2 = { workspace = true, optional = true }
objc2 = { workspace = true, optional = true }
objc2-foundation = { workspace = true, optional = true }
objc2-core-foundation = { workspace = true, optional = true, features = [
    "CFCGTypes",
] }

[target.'cfg(target_os = "macos")'.dependencies.objc2-app-kit]
workspace = true
optional = true
features = [
    "NSAlert",
    "NSApplication",
    "NSButton",
    "NSControl",
    "NSResponder",
    "NSTextField",
    "NSView",
    "NSWindow",
    "block2",
]

[package.metadata.docs.rs]
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin"]
all-features = true
