[package]
name = "simpleapp"
version = "0.1.0-alpha.2"
edition.workspace = true
authors.workspace = true
description = "Compositor-based CBF sample app."
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
license = "0BSD"
publish = false

[package.metadata.cbf.macos-bundle]
app-name = "CBF SimpleApp"
bundle-identifier = "io.github.cbf-hq.cbf.simpleapp"
runtime-app-name = "CBF SimpleApp Engine"
runtime-bundle-identifier = "io.github.cbf-hq.cbf.simpleapp.runtime"
category = "public.app-category.developer-tools"
minimum-system-version = "13.0"

[dependencies]
cbf = { path = "../../crates/cbf", features = ["native-dialogs"] }
cbf-chrome.path = "../../crates/cbf-chrome"
cbf-compositor = { path = "../../crates/cbf-compositor" }
clap = { workspace = true, features = ["derive"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
winit.workspace = true
futures-lite.workspace = true
async-executor.workspace = true
raw-window-handle.workspace = true
dirs.workspace = true
rfd.workspace = true
cursor-icon.workspace = true
image.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
rust-embed = { workspace = true, features = ["include-exclude"] }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = { workspace = true }
objc2 = { workspace = true }
objc2-core-foundation = { workspace = true, features = ["CFCGTypes"] }
objc2-foundation = { workspace = true, features = [
    "NSNotification",
    "NSOperation",
    "NSString",
    "block2",
] }
muda.workspace = true

[target.'cfg(target_os = "macos")'.dependencies.objc2-app-kit]
workspace = true
features = [
    "NSAlert",
    "NSApplication",
    "NSControl",
    "NSResponder",
    "NSTextField",
    "NSView",
    "NSWindow",
]
